@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-12T01:04:55Z",
-  "count" : 224,
+  "timestamp" : "2024-02-12T08:18:48Z",
+  "count" : 133,
   "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -76, +300 ],
+  "count_decinc" : [ -167, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
