@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-12T01:04:55Z",
+  "timestamp" : "2024-02-12T08:18:48Z",
   "count_outdated" : 187027,
   "uniques_outdated" : 1925,
-  "count" : 191232,
-  "uniques" : 1952,
+  "count" : 191343,
+  "uniques" : 1953,
   "clones" : [
     {
       "timestamp": "2024-01-29T00:00:00Z",
-      "count": 224,
+      "count": 133,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 76, 300 ],
+      "count_decinc": [ 167, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -127,6 +127,15 @@
       "count": 299,
       "count_minmax": [ 111, 299 ],
       "count_decinc": [ 0, 299 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-12T00:00:00Z",
+      "count": 111,
+      "count_minmax": [ 111, 111 ],
+      "count_decinc": [ 0, 111 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
